# wingman

./: .gitignore  .goreleaser.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  anthropic.go  client.py  docker-compose.yml  go.mod  go.sum  install  logger.py  main.go  main.py  memory.py  provider.go  pyproject.toml  rename-map.md  session.go  styles.go  tools.py  tts.py  ui.go  ui.py
_archive/: README.md  formations_runtime.go  handlers_fleets.go  handlers_formations.go
actor/: agent_actor.go  fleet.go  pool.go
agent/: agent.go  message.go  output_schema.go  output_schema_test.go  run_structured.go  run_structured_test.go
audio/: tts.go
base/: package.json
blog/: astro.config.mjs  hello-world.md
clients/: .gitignore  llm.py  loop.py
config/: config.go  config_test.go
core/: core.go
docs/: README.md  agents.md  architecture.md  astro.config.mjs  introduction.md  package.json  philosophy.md  providers.md  roadmap.md  sdk.md  server.md  sessions.md  tools.md
errors/: errors_test.go
fleet/: fleet.go
hero/: index.html  package.json  vite.config.ts
internal/: README.md
models/: README.md  accumulator.go  client.go  event.go  event_test.go  eventstream.go  message.go  model.go  models.go  part.go  part_test.go  run.go  stream.go  stream_test.go  usage_test.go
pluginhost/: manager.go  manager_test.go  manifest.go  rpc.go  tool.go
provider/: provider.go  registry.go
scripts/: check-ui-drift.mjs
server/: client_context.go  ephemeral_test.go  handlers_agents.go  handlers_bases.go  handlers_clients.go  handlers_clients_sessions_test.go  (+10 more)
(+925 files in other folders)
