[project]
name = "wingman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "elevenlabs>=1.56.0",
    "httpx>=0.28.1",
    "marqo>=3.12.0",
    "mcp[cli]>=1.6.0",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
    "textual>=3.1.0",
]
